--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@
 
 # dependencies
 /node_modules
+/server/node_modules
 
+
+ /server/package-lock.json
+ package-lock.json
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
