--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jinja2": "^0.0.1",
+    "numpy": "^0.0.1",
+    "pandas": "^0.0.3",
+    "selenium": "^2.20.0",
+    "tldextract": "^0.0.5",
+    "webdriver-manager": "^12.1.9"
   }
 }
